--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   google_sign_in: ^6.2.1
   device_preview: ^1.1.0
   responsive_builder: ^0.7.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
