--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,8 +81,9 @@ dependencies:
   google_sign_in: ^6.2.1
   device_preview: ^1.1.0
   responsive_builder: ^0.7.0
-  flutter_osm_plugin: ^1.2.0
   carousel_slider: ^4.2.1
+  flutter_osm_plugin: ^0.70.4
+  animated_bottom_navigation_bar: ^1.3.3
 
 dev_dependencies:
   flutter_test:
