--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
 
     # DateTime
   jiffy: ^6.2.1
-  intl: 0.19.0
+  intl: ^0.19.0
   http: ^1.2.1
   # Images
   cached_network_image: ^3.2.0
@@ -83,6 +83,8 @@ dependencies:
   responsive_builder: ^0.7.0
   flutter_osm_plugin: ^1.2.0
   carousel_slider: ^4.2.1
+  time_picker_spinner_pop_up: ^2.0.0
+  flutter_datetime_picker_bdaya: ^3.0.2
 
 dev_dependencies:
   flutter_test:
