--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  swipe_to: ^1.0.6
+  # mobile_scanner: ^5.1.1
+  # pretty_qr_code: ^3.3.0
+  qr_flutter: ^4.1.0
+  flutter_barcode_scanner: ^2.0.0
+  line_awesome_flutter: ^3.0.1
   google_fonts: ^6.2.1
   flutter:
     sdk: flutter
@@ -66,7 +72,7 @@ dependencies:
 
   path: ^1.8.0
   # Qrcode
-  qr_flutter: ^4.0.0
+  # qr_flutter: ^4.0.0
   scan: ^1.6.0
   grouped_list: ^5.1.2
   url_launcher: ^6.1.2
