--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,7 @@ dependencies:
   flutter_osm_plugin: ^1.2.0
   animated_bottom_navigation_bar: ^1.3.3
   shared_preferences: ^2.3.2
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
