--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   http: ^1.2.1
   # Images
   cached_network_image: ^3.2.0
-  image_picker: ^1.0.7
+  #image_picker: ^1.0.7
   # Animate
   show_up_animation: ^2.0.0
   auto_animated: ^3.0.1
